syntax = "proto3";
import "prescript.proto";

package bc;

message Patient_Account {
    string PublicKey = 1;

    repeated string label = 2;

    message medical_records {
        string LinkToLocalSystem = 1;
        string OwnerPublicKey = 2;
    }

    repeated Prescript received_prescript = 16; /*reserve 1 to 15 for higher priority fields*/
}

message PatientAcount_Container {
    repeated Patient_Account entries = 1;
}
